# timesaver-ai-agent-with-fastpai

./: .env  pyproject.toml
app/: main.py
app/ai_agents/: __init__.py  qa_agent.py  summary_agent.py
app/api/v1/: router.py
app/api/v1/endpoints/ai/: controller.py  dto.py  service.py
app/api/v1/endpoints/middleware/: communication.py
app/configs/: __init__.py  ai_agent.py  redis.py
app/utils/: __init__.py  youtube.py
info/: agent.md  crewai-pure-version.ipynb  youtube-script.py
youtube-script/: script.py
