[project]
name = "timesaver-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai[google-genai]>=1.7.2",
    "crewai-tools>=1.7.2",
    "fastapi[standard]>=0.128.0",
    "python-dotenv>=1.1.1",
    "youtube-transcript-api>=1.2.3",
    "yt-dlp>=2025.12.8",
]
